--- a/Personalcontact/app/src/main/res/values/strings.xml
+++ b/Personalcontact/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_activity__principal">Activity_Principal</string>
-
+    <string name="share">Share</string>
 </resources>
